styles/table.css
.main table {
  display: none;
  padding: 1rem 0rem;
  width: 95%;
}

.main table tr {
  text-align: center;
  background-color: white;
  color: var(--secondary-color);
}

.main table th {
  color: var(--primary-color);
  background-color: white;
  text-align: center;
  padding: 0.2rem;
}

